--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -90,7 +90,7 @@ footer.q-page-foot section {
 .q-stage.q-anchor {
     background-size: cover;
     padding-top: 20px;
-    padding-bottom: 60px;
+    padding-bottom: 0;
     max-height: 200px;
 
 }
@@ -107,7 +107,7 @@ footer.q-page-foot section {
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
     #q-anchor-behoerden.q-stage.q-anchor {
         background: transparent url('../img/h6@2x.jpg') no-repeat scroll 100% 100%;
-        background-size: contain;
+        background-size: cover;
     }
 }
 
@@ -122,7 +122,7 @@ footer.q-page-foot section {
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
     #q-anchor-buerger.q-stage.q-anchor {
         background: transparent url('../img/h5@2x.jpg') no-repeat scroll 100% 100%;
-        background-size: contain;
+        background-size: cover;
     }
 }
 
@@ -157,7 +157,7 @@ footer.q-page-foot section {
 
 .q-stage .q-text-container {
     flex: 1;
-    margin: 0px 0;
+    margin: 0;
     max-width: 380px;
 }
 
@@ -306,10 +306,120 @@ hr {
 }
 
 .q-sponsor-icons picture {
-    margin: 0px 30px;
+    margin: 0 30px;
 }
 
 
 .q-sponsor-icons picture:first-child {
-    margin-left: 0px;
+    margin-left: 0;
 }
+
+/* little changes FD  */
+
+@font-face {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../fonts/poppins-v9-latin-regular.eot'); /* IE9 Compat Modes */
+    src: local('Poppins Regular'), local('Poppins-Regular'),
+    url('../fonts/poppins-v9-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('../fonts/poppins-v9-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+    url('../fonts/poppins-v9-latin-regular.woff') format('woff'), /* Modern Browsers */
+    url('../fonts/poppins-v9-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+    url('../fonts/poppins-v9-latin-regular.svg#Poppins') format('svg'); /* Legacy iOS */
+}
+@font-face {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 700;
+    src: url('../fonts/poppins-v9-latin-700.eot'); /* IE9 Compat Modes */
+    src: local('Poppins Bold'), local('Poppins-Bold'),
+    url('../fonts/poppins-v9-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('../fonts/poppins-v9-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
+    url('../fonts/poppins-v9-latin-700.woff') format('woff'), /* Modern Browsers */
+    url('../fonts/poppins-v9-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
+    url('../fonts/poppins-v9-latin-700.svg#Poppins') format('svg'); /* Legacy iOS */
+}
+
+body {
+    font-family: Poppins, Arial, Helvetica, sans-serif;
+    font-size: 16px;
+}
+.q-logo {
+    max-width: 215px;
+    margin: 12px 0;
+}
+.q-logo img {
+    width: 100%;
+}
+
+.q-button {
+    font-size: 18px;
+    border-width: 2px;
+    letter-spacing: 0.4px;
+}
+.q-content {
+    max-width: 992px;
+}
+.q-page-foot, #q-anchor-contact {
+    max-width: 100%;
+}
+.q-bullet-point-list .q-bullet-point {
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.q-content,
+.q-bullet-point .q-bullet-point-desc {
+    line-height: 30px;
+    font-size: 18px;
+}
+h2 {
+    line-height: 45px;
+}
+.q-stage.q-anchor {
+    min-height: 260px;
+    max-height: 760px;
+}
+.q-stage .q-img-container img {
+    max-width: 360px;
+}
+footer .sponsor-label img {
+    width: 100%;
+}
+footer.q-page-foot {
+    margin: 0 auto;
+}
+footer.q-page-foot section {
+    padding-left: 0;
+}
+@media all and (max-width: 992px) {
+    .q-content {
+        padding-left: 10%;
+        padding-right: 10%;
+    }
+    .q-content.q-content-narrow {
+        padding-left: 0%;
+        padding-right: 0%;
+    }
+    .q-info-box .q-content.q-content-narrow {
+        padding-left: 10%;
+        padding-right: 10%;
+    }
+    .q-page-foot > section:nth-child(2) {
+        display: none;
+    }
+}
+/* anchor-fix */
+.q-anchor {
+    position: relative;
+}
+.q-anchor a.anchorfix {
+    position: absolute;
+    left: 0px;
+    top: -87px;
+}
+
+
+/* END little changes FD  */
